<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dip">

    <TextView
            android:id="@+id/tv_welcome"
            android:text="@string/welcome_please_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dip"/>

    <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/type_email_here"
            android:layout_marginBottom="10dip"/>

    <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/type_password_here"/>
    <Button
            android:id="@+id/b_login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center"/>
</LinearLayout>